--- a/Hardware/.vscode/launch.json
+++ b/Hardware/.vscode/launch.json
@@ -12,8 +12,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "C:/Users/Adam/Documents/PlatformIO/Projects/231026-130839-kendryte-standalone-sdk_hello/.pio/build/sipeed-maix-go/firmware.elf",
-            "projectEnvName": "sipeed-maix-go",
+            "executable": "C:/Users/Adam/Desktop/riscVaudioDenoising/Hardware/.pio/build/sipeed-maixduino/firmware.elf",
+            "projectEnvName": "sipeed-maixduino",
             "toolchainBinDir": "C:/Users/Adam/.platformio/packages/toolchain-kendryte210/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
@@ -25,8 +25,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "C:/Users/Adam/Documents/PlatformIO/Projects/231026-130839-kendryte-standalone-sdk_hello/.pio/build/sipeed-maix-go/firmware.elf",
-            "projectEnvName": "sipeed-maix-go",
+            "executable": "C:/Users/Adam/Desktop/riscVaudioDenoising/Hardware/.pio/build/sipeed-maixduino/firmware.elf",
+            "projectEnvName": "sipeed-maixduino",
             "toolchainBinDir": "C:/Users/Adam/.platformio/packages/toolchain-kendryte210/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
@@ -34,8 +34,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "C:/Users/Adam/Documents/PlatformIO/Projects/231026-130839-kendryte-standalone-sdk_hello/.pio/build/sipeed-maix-go/firmware.elf",
-            "projectEnvName": "sipeed-maix-go",
+            "executable": "C:/Users/Adam/Desktop/riscVaudioDenoising/Hardware/.pio/build/sipeed-maixduino/firmware.elf",
+            "projectEnvName": "sipeed-maixduino",
             "toolchainBinDir": "C:/Users/Adam/.platformio/packages/toolchain-kendryte210/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
